made more changes. added banners to portfolio images and made everything awesome

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     
         <img src="assets/images/joeanddogs.JPG" height="122" width="159">
         <div>
-            <p>
+            <p class="bio text-justify">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac finibus nunc, in volutpat enim. Nunc ornare velit in varius tempor. In hac habitasse platea dictumst. Duis quis sollicitudin lectus. In pretium finibus lectus eget egestas. Pellentesque maximus venenatis justo, ac tincidunt nibh interdum ac. Cras tincidunt varius ex, ac posuere lacus cursus et. Integer vel placerat eros. Maecenas faucibus rhoncus porttitor. Aliquam nec laoreet lorem. Sed vel diam sapien. Nam nec dignissim dolor, quis gravida ligula. Curabitur bibendum turpis tortor, sed ultrices tortor rutrum vel. Suspendisse potenti. Donec finibus turpis tortor, at dapibus purus feugiat sit amet.
         
                     Sed interdum enim eu laoreet eleifend. Phasellus tincidunt, justo sed maximus lacinia, massa tortor feugiat mi, ac varius massa odio ut lorem. Nam in pellentesque leo. Aenean vulputate sapien ac efficitur porta. Pellentesque vel tempor massa. Nullam pharetra, sem non lacinia gravida, ex quam sagittis turpis, viverra tempor tortor erat quis tortor. Aenean tincidunt sem in nibh scelerisque, ac posuere urna volutpat. Fusce ut scelerisque nulla. In hac habitasse platea dictumst. Nullam lobortis purus augue, a condimentum lorem molestie quis. Aliquam erat volutpat.
