--- a/index.html
+++ b/index.html
@@ -6,97 +6,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Joe's Portfolio</title>
+     <!--FontAwesome-->
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--MaterializeCSS-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <!--
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.css" />
-   -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Materialize JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!--JQuery-->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <!--My JS-->
+    <script type="text/javascript" src="./assets/logic.js"></script>
     <!--My CSS-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-
-
     <link rel="stylesheet" type="text/css" href="assets/css/style-new.css" />
+
 </head>
 
 <body>
-
-
-    <!--Dropdown Structure-->
-    <ul id="dropdown1" class="dropdown-content">
-        <li><a href="portfolio.html">All Projects</a></li>
-        <li><a href="https://joe-dumford.github.io/TriviaGame/">Trivia Game</a></li>
-        <li><a href="https://joe-dumford.github.io/gifster/">Gif Creator</a></li>
-        <li class="divider"></li>
-        <li><a href="https://joe-dumford.github.io/RealTime-TrainSchedule/">RealTime-TrainSchedule</a></li>
-    </ul>
-    <nav>
-        <div class="nav-wrapper">
-            <li class="brand-logo left" id="myName">Joe Dumford</li>
-            <ul class="right hide-on-med-and-down" id="navButtons">
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <!--Dropdown Trigger-->
-                <li><a class="dropdown-trigger" href="assets/logic.js" data-target="dropdown1">Dropdown<i
-                            class="material-icons right"></i></a></li>
-            </ul>
-        </div>
-    </nav>
-
-    <!--  
-    ~ORIGINAL NAV~
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!--BIG NAV-->
+    <nav class="nav-wrapper">
         <div class="container">
-          ~NAME~
-            <a class="navbar-brand navbar-name">Joe Dumford</a>
-          ~NAV LINKS~
-            <ul class="navbar-nav ml-auto">
-
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">About</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
+            <a href="#" class="brand-logo center-on-med-and-down" id="myName">Joe Dumford</a>
+            <a href="#" class="sidenav-trigger right" data-target="mobile-nav">
+                <i class="material-icons" id="burger">menu</i>
+            </a>
+            <ul class="right hide-on-med-and-down" id="navButtons">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="http://github.com/joe-dumford">GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/joe-dumford/">LinkedIn</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
     </nav>
--->
+
+    <!--SIDEBAR NAV-->
+    <ul class="sidenav" id="mobile-nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="http://github.com/joe-dumford">GitHub</a></li>
+        <li><a href="https://www.linkedin.com/in/joe-dumford/">LinkedIn</a></li>
+        <li><a href="contact.html">Contact</a></li>
+
+    </ul>
+
 
     <div class="container-fluid">
         <div class="content">
             <div class="col-12">
                 <div class="row title">
-                    <h2>About Me</h2>
+                    <h2>Brief History</h2>
                 </div>
                 <div class="row">
 
                     <p class="bio text-justify">
                         <img class="myimage" src="assets/images/joeanddogs.JPG" />
                         <span>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac
-                            finibus nunc, in volutpat enim. Nunc ornare velit in varius tempor.
-                            In hac habitasse platea dictumst. Duis quis sollicitudin lectus. In
-                            pretium finibus lectus eget egestas. Pellentesque maximus venenatis
-                            justo, ac tincidunt nibh interdum ac. Cras tincidunt varius ex, ac
-                            posuere lacus cursus et. Integer vel placerat eros. Maecenas
-                            faucibus rhoncus porttitor. Aliquam nec laoreet lorem. Sed vel diam
-                            sapien. Nam nec dignissim dolor, quis gravida ligula. Curabitur
-                            bibendum turpis tortor, sed ultrices tortor rutrum vel. Suspendisse
-                            potenti. Donec finibus turpis tortor, at dapibus purus feugiat sit
-                            amet. Sed interdum enim eu laoreet eleifend. Phasellus tincidunt,
-                            justo sed maximus lacinia, massa tortor feugiat mi, ac varius massa
-                            odio ut lorem. Nam in pellentesque leo. Aenean vulputate sapien ac
-                            efficitur porta. Pellentesque vel tempor massa. Nullam pharetra, sem
-                            non lacinia gravida, ex quam sagittis turpis, viverra tempor tortor
-                            erat quis tortor. Aenean tincidunt sem in nibh scelerisque, ac
-                            posuere urna volutpat. Fusce ut scelerisque nulla. In hac habitasse
-                            platea dictumst. Nullam lobortis purus augue, a condimentum lorem
-                            molestie quis. Aliquam erat volutpat.
+                            As graduate from Georgia College & State University with a BA in Fine Arts, Joe has always
+                            gravitated towards the creative process. This is one of the aspects that drove him to enroll
+                            in Georgia Tech and pursue web based design. Since graduation from GC&SU, he worked for an
+                            advertisement agency and eventually found his way into the film and television industry.
+                            While here, he realized this was not his final career path. Upon his reassessment, he took
+                            the hard, but necessary, steps of leaving the industry to go to work for Starbucks to put
+                            himself through school. Joe believes persistent hard work, determination and the right
+                            mindset are the keys to success in any aspect of life. It's this core belief that has given
+                            him the confidence to pursue his goal of software development.
                         </span>
 
                     </p>
@@ -104,16 +80,14 @@
             </div>
         </div>
     </div>
-    <div class="footer"></div>
-
+    <div class="footer">
+           
+    </div>
     <!--Materialize JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <!--JQuery-->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <!--My JS-->
-    <script src="assets/logic.js"></script>
-
 </body>
 
 </html>
