added social media icons

--- a/portfolio.html
+++ b/portfolio.html
@@ -131,8 +131,16 @@
 
 
     <div class="footer">
-            <a class="waves-effect waves-light btn-floating social github">
-                    <i class="fa fa-github"></i> Sign in with github</a>
+
+        <a class="waves-effect waves-light btn social github">
+            <i class="fa fa-github"></i></a>
+            
+
+        <a class="waves-effect waves-light btn social linkedin">
+                <i class="fa fa-linkedin"></i></a>
+
+        <a class="waves-effect waves-light btn social twitter">
+                    <i class="fa fa-twitter"></i></a>
     </div>
     <!--Materialize JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
