social icons now have clickable functionality

--- a/portfolio.html
+++ b/portfolio.html
@@ -132,14 +132,16 @@
 
     <div class="footer">
 
-        <a class="waves-effect waves-light btn social github">
+        <a class="waves-effect waves-light btn social github" onclick="window.location.href='http://github.com/joe-dumford'">
             <i class="fa fa-github"></i></a>
             
 
-        <a class="waves-effect waves-light btn social linkedin">
+        <a class="waves-effect waves-light btn social linkedin"
+        onclick="window.location.href='https://www.linkedin.com/in/joe-dumford/'">
                 <i class="fa fa-linkedin"></i></a>
 
-        <a class="waves-effect waves-light btn social twitter">
+        <a class="waves-effect waves-light btn social twitter"
+        onclick="window.location.href='https://twitter.com/a_dumford'">
                     <i class="fa fa-twitter"></i></a>
     </div>
     <!--Materialize JS-->
