--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </a>
             <ul class="right hide-on-med-and-down" id="navButtons">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="portfolio.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
@@ -43,7 +43,7 @@
     <!--SIDEBAR NAV-->
     <ul class="sidenav" id="mobile-nav">
         <li><a href="index.html">Home</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="portfolio.html">Projects</a></li>
         <li><a href="http://github.com/joe-dumford">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/joe-dumford/">LinkedIn</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -93,7 +93,7 @@
             onclick="window.location.href='https://twitter.com/a_dumford'">
             <i class="fa fa-twitter"></i></a>
     </div>
-    
+
     <!--Materialize JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <!--JQuery-->
