--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
             </a>
             <ul class="right hide-on-med-and-down" id="navButtons">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="portfolio.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
@@ -43,7 +43,7 @@
     <!--SIDEBAR NAV-->
     <ul class="sidenav" id="mobile-nav">
         <li><a href="index.html">Home</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="portfolio.html">Projects</a></li>
         <li><a href="http://github.com/joe-dumford">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/joe-dumford/">LinkedIn</a></li>
         <li><a href="contact.html">Contact</a></li>
