--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
                         <li>
                                 <div class="image-wrapper">
                                     <a href="https://joe-dumford.github.io/DrumPad/">
-                                        <img src="assets/images/drumpad.jpg" width="200px">
+                                        <img src="assets/images/drumPad.png" width="200px">
                                         <div class="banner">DrumPad</div>
                                     </a>
                                 </div>
@@ -87,9 +87,9 @@
                         <!--Train Finder-->
                         <li>
                             <div class="image-wrapper">
-                                <a href="https://joe-dumford.github.io/RealTime-TrainSchedule/">
-                                    <img src="assets/images/TrainThumb.jpg" width="200px">
-                                    <div class="banner">Train Finder</div>
+                                <a href="https://joe-dumford.github.io/clickywithreact/">
+                                    <img src="assets/images/clickyGame.png" width="200px">
+                                    <div class="banner">Memory Game</div>
                                 </a>
                             </div>
                         </li>
@@ -106,15 +106,15 @@
                         <li>
                             <div class="image-wrapper">
                                 <a href="https://joe-dumford.github.io/unit-4-game/">
-                                    <img src="assets/images/Cryst_gameThumb.jpg" width="200px">
-                                    <div class="banner">Crystal Game</div>
+                                    <img src="assets/images/chess.png" width="200px">
+                                    <div class="banner">Chess</div>
                                 </a>
                             </div>
                         </li>
                         <!--GifSter-->
                         <li>
                             <div class="image-wrapper">
-                                <a href="https://joe-dumford.github.io/gifster/">
+                                <a href="https://joe-dumford.github.io/chess-ter/">
                                     <img src="assets/images/gifsterThumb.jpg" width="200px">
                                     <div class="banner">Gifster!</div>
                                 </a>
