--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="row">
 
                     <p class="bio text-justify">
-                        <img class="myimage" src="assets/images/joeanddogs.JPG" />
+                        <img class="myimage" src="assets/images/Joe_ProfPic.jpg" />
                         <span>
                             As graduate from Georgia College & State University with a BA in Fine Arts, Joe has always
                             gravitated towards the creative process. This is one of the aspects that drove him to enroll
