--- a/portfolio.html
+++ b/portfolio.html
@@ -105,7 +105,7 @@
                         <!--Crystal Game-->
                         <li>
                             <div class="image-wrapper">
-                                <a href="https://joe-dumford.github.io/unit-4-game/">
+                                <a href="https://joe-dumford.github.io/chess-ter/">
                                     <img src="assets/images/chess.png" width="200px">
                                     <div class="banner">Chess</div>
                                 </a>
