Updated Gifster Link

--- a/portfolio.html
+++ b/portfolio.html
@@ -114,7 +114,7 @@
                         <!--GifSter-->
                         <li>
                             <div class="image-wrapper">
-                                <a href="https://joe-dumford.github.io/chess-ter/">
+                                <a href="https://joe-dumford.github.io/gifster/">
                                     <img src="assets/images/gifsterThumb.jpg" width="200px">
                                     <div class="banner">Gifster!</div>
                                 </a>
