Changed contact page layout and styling

--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
                                 </div>
                             </li>
 
-                        <!--Train Finder-->
+                        <!--South Park Memory Game-->
                         <li>
                             <div class="image-wrapper">
                                 <a href="https://joe-dumford.github.io/clickywithreact/">
@@ -102,7 +102,7 @@
                                 </a>
                             </div>
                         </li>
-                        <!--Crystal Game-->
+                        <!--Chess-->
                         <li>
                             <div class="image-wrapper">
                                 <a href="https://joe-dumford.github.io/chess-ter/">
