--- a/index.html
+++ b/index.html
@@ -62,15 +62,7 @@
                     <p class="bio text-justify">
                         <img class="myimage" src="assets/images/Joe_ProfPic.jpg" />
                         <span>
-                            As graduate from Georgia College & State University with a BA in Fine Arts, Joe has always
-                            gravitated towards the creative process. This is one of the aspects that drove him to enroll
-                            in Georgia Tech and pursue web based design. Since graduation from GC&SU, he worked for an
-                            advertisement agency and eventually found his way into the film and television industry.
-                            While here, he realized this was not his final career path. Upon his reassessment, he took
-                            the hard, but necessary, steps of leaving the industry to go to work for Starbucks to put
-                            himself through school. Joe believes persistent hard work, determination and the right
-                            mindset are the keys to success in any aspect of life. It's this core belief that has given
-                            him the confidence to pursue his goal of software development.
+                                As a graduate from Georgia College & State University with a BA in Fine Arts, Joe has always gravitated towards the creative and collaborative process. While able to work alone, his strong interpersonal and communication skills make him able to thrive on a team and welcome constructive criticism. Having worked in a variety of fast pace industries, Joe is adaptive to his environments and consistently meets time sensitive deadlines. Joe believes persistence, hard work, determination and the right mindset are the keys to success in all aspects of life. It's this core belief that led him to enroll in Georgia Tech to receive his Full Stack Web Development certification and pursue his dream of working in the Tech Industry.
                         </span>
 
                     </p>
