Updated Bio again

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <p class="bio text-justify">
                         <img class="myimage" src="assets/images/Joe_ProfPic.jpg" />
                         <span>
-                                As a graduate from Georgia College & State University with a BA in Fine Arts, Joe has always gravitated towards the creative and collaborative process. While able to work alone, his strong interpersonal and communication skills make him able to thrive on a team and welcome constructive criticism. Having worked in a variety of fast pace industries, Joe is adaptive to his environments and consistently meets time sensitive deadlines. Joe believes persistence, hard work, determination and the right mindset are the keys to success in all aspects of life. It's this core belief that led him to enroll in Georgia Tech to receive his Full Stack Web Development certification and pursue his dream of working in the Tech Industry.
+                                As a graduate from Georgia College and State University with a BA in Fine Arts, Joe has always gravitated towards the creative and collaborative process. While able to work alone, his strong interpersonal and communication skills make him able to thrive on a team and welcome constructive criticism. Having worked in a variety of fast pace industries, Joe is adaptive to his environments and consistently meets time sensitive deadlines. Joe believes persistence, hard work, and the right mindset are the keys to success in all aspects of life. It's this core belief that led him to enroll in Georgia Tech to receive his Full Stack Web Development certification and pursue his dream of working in the Tech Industry.
                         </span>
 
                     </p>
