Added Breakout project to projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -65,15 +65,17 @@
                                 </a>
                             </div>
                         </li>
-                        <!--VoxDox-->
-                        <!-- <li>
+
+                        <!--Breakout-->
+                        <li>
                             <div class="image-wrapper">
-                                <a href="https://voxdoxlockbox.herokuapp.com/">
-                                    <img src="assets/images/VoxDox.jpg" width="200px">
-                                    <div class="banner">VoxDox</div>
+                                <a href="https://joe-dumford.github.io/breakout/">
+                                    <img src="assets/images/Breakout.png" width="200px">
+                                    <div class="banner">BreakOut</div>
                                 </a>
                             </div>
-                        </li> -->
+                        </li>
+
                         <!--DrumPad-->
                         <li>
                                 <div class="image-wrapper">
